--- a/src/app/user-interface/transactions/main-page/transactions-main-page.component.html
+++ b/src/app/user-interface/transactions/main-page/transactions-main-page.component.html
@@ -31,7 +31,7 @@
 
 <emp-ng-modal-window *ngIf="displayRequestCreator"
                      [config]="{width:'820px', height:'840px'}">
-  <emp-land-request-creator
+  <!-- <emp-land-request-creator
     (closeEvent)="onRequestCreatorClosed()">
-  </emp-land-request-creator>
+  </emp-land-request-creator> -->
 </emp-ng-modal-window>
