--- a/src/app/user-interface/instrument-edition/recording-acts/recording-acts-editor.component.html
+++ b/src/app/user-interface/instrument-edition/recording-acts/recording-acts-editor.component.html
@@ -1,11 +1,11 @@
 <emp-ng-card [title]="'Información del acto jurídico'"
-						 [hint]="request.requestedBy"
+						 [hint]="transaction.requestedBy"
 						 (cardClose)="onClose()">
 
   <div fxFlexOffset="5" fxFlex="90">
   <div class="section-title">Personas físicas y morales involucradas en el acto jurídico</div>
     <emp-land-party-list></emp-land-party-list>
-    <emp-land-party-editor (emitSaved)="partyAdded($event)"></emp-land-party-editor> 
+    <emp-land-party-editor (emitSaved)="partyAdded($event)"></emp-land-party-editor>
 	</div>
 
 </emp-ng-card>
