--- a/src/app/user-interface/transactions/main-page/transactions-main-page.component.html
+++ b/src/app/user-interface/transactions/main-page/transactions-main-page.component.html
@@ -1,37 +1,35 @@
 <div class="explorer" fxLayoutGap="32px">
 
   <div [fxHide.lt-lg]="displayEditor || displayEditorRecordingAct" class="primary">
-    <emp-land-request-list
-        [requestList]="requestList"
-        [selectedRequest]="selectedRequest"
+    <emp-land-transaction-list
+        [transactionList]="transactionList"
+        [selectedTransaction]="selectedTransaction"
         [filter]="filter"
         [title]="currentView.title"
         [isLoading]="isLoading"
-        (requestListEvent)="onRequestListEvent($event)">
-    </emp-land-request-list>
+        (transactionListEvent)="onTransactionListEvent($event)">
+    </emp-land-transaction-list>
   </div>
 
 
   <div *ngIf="displayEditor" class="secondary">
-    <emp-land-request-tabbed-view
-        [transaction]="selectedRequest"
+    <emp-land-transaction-tabbed-view
+        [transaction]="selectedTransaction"
         (closeEvent)="onCloseEditor()">
-    </emp-land-request-tabbed-view>
+    </emp-land-transaction-tabbed-view>
   </div>
 
 
   <div *ngIf="displayEditorRecordingAct" class="secondary">
     <emp-land-recording-acts
-        [request]="selectedRequest"
+        [transaction]="selectedTransaction"
         (closeEvent)="onCloseEditor()">
     </emp-land-recording-acts>
   </div>
 
 </div>
 
-<emp-ng-modal-window *ngIf="displayRequestCreator"
+<emp-ng-modal-window *ngIf="displayTransactionCreator"
                      [config]="{width:'820px', height:'840px'}">
-  <!-- <emp-land-request-creator
-    (closeEvent)="onRequestCreatorClosed()">
-  </emp-land-request-creator> -->
+
 </emp-ng-modal-window>
