--- a/src/app/user-interface/transactions/transaction-list/transaction-list.component.html
+++ b/src/app/user-interface/transactions/transaction-list/transaction-list.component.html
@@ -6,7 +6,7 @@
       {{title}}
       <div class="card-hint" empNgProgressText
            loadingText="Cargando trámites"
-           [finalText]="requestList.length + ' trámites encontrados'"
+           [finalText]="transactionList.length + ' trámites encontrados'"
            [isLoading]="isLoading"></div>
 
     </div>
@@ -18,8 +18,8 @@
                placeholder="Buscar trámites"
                (search)="onFilterChange()" [(ngModel)]="keywords">
         &nbsp; &nbsp; &nbsp;
-        <button class="btn-action" 
-                (click)="onClickCreateRequestButton()">Nuevo</button>
+        <button class="btn-action"
+                (click)="onClickCreateTransactionButton()">Nuevo</button>
 
     </div>
 
@@ -28,18 +28,20 @@
   <div class="card-body" [empNgSpinnerHost]="spinner">
     <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
-    <div *ngFor="let request of requestList"
+    <div *ngFor="let transaction of transactionList"
           class="list-item" matRipple [matRippleTrigger]="trigger"
-          [class.list-item-selected]="isSelected(request)">
+          [class.list-item-selected]="isSelected(transaction)">
 
       <div class="list-item-container">
 
         <div class="list-item-name">
           <strong><a #trigger
-              (click)="onSelect(request)">{{request.requestedBy}}</a></strong>
+              (click)="onSelect(transaction)">{{transaction.requestedBy}}</a></strong>
         </div>
 
-        <emp-land-request-list-item [request]="request" (editionEvent)="onSelectRecordingAct(request)"></emp-land-request-list-item>
+        <emp-land-transaction-list-item [transaction]="transaction" (provisionalEvent)="onSelectRecordingAct(transaction)">
+
+        </emp-land-transaction-list-item>
 
       </div>
 
