Rfx TransactionList must communicate with its parent only using events

--- a/src/app/views/transactions/transaction-list/transaction-list-item.component.html
+++ b/src/app/views/transactions/transaction-list/transaction-list-item.component.html
@@ -23,8 +23,7 @@
 
   <div fxFlex="5%">
     <div class="primary-text nowrap">
-      <button mat-mini-fab color="accent" matTooltip="Agregar personas al acto jurídico"
-              (click)="showProvisionalRecordingEditor()"><mat-icon>search</mat-icon></button>
+      <mat-icon (click)="onClickTransactionOptions()">more_vert</mat-icon>
     </div>
   </div>
 
