--- a/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
+++ b/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
@@ -15,7 +15,7 @@
     </ng-template>
   </mat-tab>
 
-  <mat-tab label="Inscripción de documentos">
+  <mat-tab label="Inscripción">
     <ng-template matTabContent>
       <emp-land-instrument-edition [transaction]="transaction"></emp-land-instrument-edition>
     </ng-template>
@@ -27,17 +27,12 @@
     </ng-template>
   </mat-tab>
 
-  <mat-tab label="Devoluciones" disabled>
+  <mat-tab label="Historia" disabled>
     <ng-template matTabContent>
 
     </ng-template>
   </mat-tab>
 
-  <mat-tab label="Estado del trámite" disabled>
-    <ng-template matTabContent>
-
-    </ng-template>
-  </mat-tab>
 </mat-tab-group>
 
 </emp-ng-card>
