Display assignedTo field in transaction-list-item

--- a/src/app/views/transactions/transaction-list/transaction-list-item.component.html
+++ b/src/app/views/transactions/transaction-list/transaction-list-item.component.html
@@ -17,8 +17,9 @@
   </div>
 
   <div fxFlex="30%">
-    <div class="label">Estado:</div>
-    <div class="primary-text nowrap"><strong>{{transaction.statusName}}</strong></div>
+    <div class="label">Lo tiene:</div>
+    <div class="primary-text nowrap"><strong>{{transaction.assignedToName}}</strong></div>
+    <div>{{transaction.statusName}}</div>
   </div>
 
   <div fxFlex="5%">
