--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -97,7 +97,7 @@ table.form-section .form-section-title {
 .section-title {
   color: $form-title-color;
   border-bottom: $form-title-border;
-  margin: 0.5rem 0;
+  margin: 0.5rem 8px 0.5rem 0;
 }
 
 form.form-section {
