--- a/src/app/views/instrument-edition/instrument-edition.component.html
+++ b/src/app/views/instrument-edition/instrument-edition.component.html
@@ -1,3 +1,3 @@
-<emp-land-instrument-header [transaction]="transaction" [instrument]="instrument">
+<emp-land-instrument-header [transactionUID]="transactionUID" [instrument]="instrument">
 
 </emp-land-instrument-header>
