--- a/src/app/views/instrument-edition/recording-acts/recording-acts-editor.component.html
+++ b/src/app/views/instrument-edition/recording-acts/recording-acts-editor.component.html
@@ -1,5 +1,5 @@
 <emp-ng-card [title]="'Información del acto jurídico'"
-						 [hint]="transaction.requestedBy"
+						 [hint]="transaction.requestedBy.name"
 						 (cardClose)="onClose()">
 
   <div fxFlexOffset="5" fxFlex="90">
