Change placeholder to input property in select-box

--- a/src/app/shared/form-controls/select-box/select-box.component.html
+++ b/src/app/shared/form-controls/select-box/select-box.component.html
@@ -3,6 +3,7 @@
   [disabled]="disabled"
   [items]="items"
   [loading]="loading"
+  [placeholder]="placeholder"
   [typeahead]="typeahead"
   [addTag]="selectBoxConfig.addTag"
   [addTagText]="selectBoxConfig.addTagText"
@@ -16,7 +17,6 @@
   [minTermLength]="selectBoxConfig.minTermLength"
   [multiple]="selectBoxConfig.multiple"
   [notFoundText]="selectBoxConfig.notFoundText"
-  [placeholder]="selectBoxConfig.placeholder"
   [searchable]="selectBoxConfig.searchable"
   [typeToSearchText]="selectBoxConfig.typeToSearchText"
   [virtualScroll]="selectBoxConfig.virtualScroll"
