Display loading when reading transaction long version

--- a/src/app/views/transactions/main-page/transactions-main-page.component.html
+++ b/src/app/views/transactions/main-page/transactions-main-page.component.html
@@ -1,3 +1,5 @@
+<emp-ng-spinner #spinner [visible]="isLoadingTransaction"></emp-ng-spinner>
+
 <div class="explorer" fxLayoutGap="32px">
 
   <div [fxHide.lt-lg]="displayTransactionTabbedView || displayRecordingActEditor" class="primary">
