--- a/src/app/views/transactions/transaction-creator/transaction-creator.component.html
+++ b/src/app/views/transactions/transaction-creator/transaction-creator.component.html
@@ -4,7 +4,7 @@
   (cardClose)="onClose()">
 
   <div style="padding: 0 16px 32px 16px !important;">
-    <emp-land-transaction-header>
+    <emp-land-transaction-header [transaction]="transaction">
 
     </emp-land-transaction-header>
   </div>
