--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -115,3 +115,8 @@ form.form-section {
     margin-right: 8px;
   }
 }
+
+.tab-container {
+  margin: auto 8px 8px auto;
+  width: calc(100% - 9px);
+}
