Use menu component in transaction-list-item

--- a/src/app/views/transactions/transaction-list/transaction-list-item.component.html
+++ b/src/app/views/transactions/transaction-list/transaction-list-item.component.html
@@ -24,7 +24,12 @@
 
   <div fxFlex="5%">
     <div class="primary-text nowrap">
-      <mat-icon (click)="onClickTransactionOptions()">more_vert</mat-icon>
+
+      <emp-ng-menu [items]="[{'name': 'Agregar Personas'}]"
+        (selected)="onClickTransactionOptions($event)">
+
+      </emp-ng-menu>
+
     </div>
   </div>
 
