--- a/src/app/shared/containers/message-box/message-box.component.html
+++ b/src/app/shared/containers/message-box/message-box.component.html
@@ -6,14 +6,14 @@
 
 <mat-dialog-actions *ngIf="model.messageBoxType === 'Accept'">
 
-    <button class="btn-action" cdk-focus-start
+    <button class="btn-action" cdkFocusRegionstart
             (click)="onClickButton('accept')">{{model.mainButtonText || 'Aceptar'}}</button>
 
 </mat-dialog-actions>
 
 <mat-dialog-actions *ngIf="model.messageBoxType === 'AcceptCancel'">
 
-    <button class="btn-action" cdk-focus-start
+    <button class="btn-action" cdkFocusRegionstart
             (click)="onClickButton('accept')">{{model.mainButtonText || 'Aceptar'}}</button>
 
     <button class="btn"
@@ -27,7 +27,7 @@
   <button class="btn-warning"
           (click)="onClickButton('accept')">{{model.mainButtonText || 'Eliminar'}}</button>
 
-  <button class="btn-action" cdk-focus-start
+  <button class="btn-action" cdkFocusRegionstart
           (click)="onClickButton('cancel')">Cancelar</button>
 
 </mat-dialog-actions>
