--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -44,6 +44,11 @@
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
+.list-item-checkbox {
+  margin: auto;
+  padding: 0 4px 0 8px;
+}
+
 .list-item-container {
   margin-left: 4pt;
   padding: 4pt 8pt 8pt 8pt;
