--- a/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
+++ b/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
@@ -6,37 +6,37 @@
       <th mat-header-cell *matHeaderCellDef> # </th>
       <td mat-cell *matCellDef="let row; let i = index;"> <strong>{{i + 1}}</strong> </td>
     </ng-container>
-    <ng-container matColumnDef="type">
+    <ng-container matColumnDef="typeName">
       <th mat-header-cell *matHeaderCellDef> Concepto </th>
-      <td mat-cell *matCellDef="let row"> {{ row.typeName}} </td>
+      <td mat-cell *matCellDef="let row"> {{ row.typeName }} </td>
     </ng-container>
-    <ng-container matColumnDef="baseGravable">
-      <th mat-header-cell *matHeaderCellDef> Base gravable </th>
-      <td mat-cell *matCellDef="let row"> </td>
+    <ng-container matColumnDef="taxableBase">
+      <th mat-header-cell *matHeaderCellDef class="text-align-right"> Base gravable </th>
+      <td mat-cell *matCellDef="let row" class="text-align-right"> {{ row.taxableBase | currency }} </td>
     </ng-container>
-    <ng-container matColumnDef="cantidad">
-      <th mat-header-cell *matHeaderCellDef> Cantidad </th>
-      <td mat-cell *matCellDef="let row"> </td>
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef class="text-align-right"> Cantidad </th>
+      <td mat-cell *matCellDef="let row" class="text-align-right"> {{ row.quantity }} </td>
     </ng-container>
-    <ng-container matColumnDef="unidadMedida">
+    <ng-container matColumnDef="unitName">
       <th mat-header-cell *matHeaderCellDef> Unidad medida </th>
-      <td mat-cell *matCellDef="let row"> </td>
+      <td mat-cell *matCellDef="let row"> {{ row.unitName }} </td>
     </ng-container>
-    <ng-container matColumnDef="fundamento">
+    <ng-container matColumnDef="legalBasis">
       <th mat-header-cell *matHeaderCellDef> Fundamento </th>
-      <td mat-cell *matCellDef="let row"> </td>
+      <td mat-cell *matCellDef="let row"> {{ row.legalBasis }} </td>
     </ng-container>
-    <ng-container matColumnDef="observations">
+    <ng-container matColumnDef="notes">
       <th mat-header-cell *matHeaderCellDef> Observaciones </th>
-      <td mat-cell *matCellDef="let row"> </td>
+      <td mat-cell *matCellDef="let row"> {{ row.notes }} </td>
     </ng-container>
-    <ng-container matColumnDef="recibo">
-      <th mat-header-cell *matHeaderCellDef> Recibo </th>
-      <td mat-cell *matCellDef="let row"> </td>
+    <ng-container matColumnDef="treasuryCode">
+      <th mat-header-cell *matHeaderCellDef> Código tesorería </th>
+      <td mat-cell *matCellDef="let row"> {{ row.treasuryCode }} </td>
     </ng-container>
-    <ng-container matColumnDef="Importe">
-      <th mat-header-cell *matHeaderCellDef> Importe </th>
-      <td mat-cell *matCellDef="let row"> </td>
+    <ng-container matColumnDef="subtotal">
+      <th mat-header-cell *matHeaderCellDef class="text-align-right"> Importe </th>
+      <td mat-cell *matCellDef="let row" class="text-align-right"> {{ row.subtotal | currency }} </td>
     </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
