--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -164,11 +164,16 @@ table.mat-table {
     padding-right: 10px;
   }
 
+  th.text-align-right {
+    text-align: right;
+    justify-content: flex-end;
+    padding-right: 10px;
+  }
+
   td {
     background-color: white;
     vertical-align: top;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 10px 10px 0;
 
     .mat-icon {
       cursor: pointer;
