--- a/src/app/views/transactions/transaction-editor/transaction-editor.component.html
+++ b/src/app/views/transactions/transaction-editor/transaction-editor.component.html
@@ -27,6 +27,7 @@
       </mat-expansion-panel-header>
 
       <emp-land-requested-service-editor *ngIf="panelAddServiceOpenState"
+        [providedServiceTypeList]="providedServiceTypeList"
         (requestedServiceEditortEvent)="onRequestedServiceEditortEvent($event)">
 
       </emp-land-requested-service-editor>
